# experimenting-with-binstall

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: build-and-test.yml  compile-and-publish-binaries-to-release.yml  release-plz.yml
src/: main.rs
